include_HEADERS = $(top_srcdir)/include/lsf.h $(top_srcdir)/include/lib/osal.h  $(top_srcdir)/config.h

lib_LIBRARIES = liblsf.a
liblsf_a_SOURCES = channel.c comm.c conf.c confmisc.c conn.c control.c cwd.c debug.c dir.c eauth.c eligible.c err.c errno.c esub.c host.c i18n.c id.c info.c init.c initenv.c limits.c load.c lsf.c misc.c nioback.c nios.c osal.c pim.c place.c priority.c queue.c rcp.c rdwr.c res.c resctrl.c reslog.c rex.c rf.c rtask.c rwait.c sig.c so.c sock.c syntax.c syslog.c table.c term.c tid.c tty.c usleep.c utmp.c wconf.c whathost.c words.c xdr.c xdrlim.c xdrmisc.c xdrnio.c xdrres.c xdrrf.c

