AM_CPPFLAGS = -DSYSCONFDIR=\"${sysconfdir}\" -I$(top_srcdir)/lsf/include

# include_HEADERS = $(srcdir)/include/lsf.h $(srcdir)/include/lib/osal.h  $(srcdir)/config.h

lib_LIBRARIES = liblsf.a
liblsf_a_SOURCES = channel.c \
comm.c \
conf.c \
confmisc.c \
conn.c \
control.c \
cwd.c \
debug.c \
dir.c \
doSkipSection.c \
do_hosts.c \
eauth.c \
eligible.c \
err.c \
errno.c \
esub.c \
getnextline.c \
globals.c \
host.c \
i18n.c \
id.c \
info.c \
init.c \
initenv.c \
limd_globals.c \
limits.c \
load.c \
lsb_globals.c \
mbd_globals.c \
misc.c \
nioback.c \
nios.c \
niosd_globals.c \
osal.c \
pamd_globals.c \
pim.c \
pimd_globals.c \
place.c \
priority.c \
putInLists.c \
queue.c \
rcp.c \
rdwr.c \
res.c \
resctrl.c \
resd_globals.c \
reslog.c \
resnameDefined.c \
rex.c \
rf.c \
rtask.c \
rusage.c \
rwait.c \
sbd_globals.c \
signal.c \
so.c \
sock.c \
syntax.c \
syslog.c \
table.c \
term.c \
taskid.c \
tty.c \
usleep.c \
utmp.c \
wconf.c \
whathost.c \
words.c \
xdr.c \
xdrlim.c \
xdrmisc.c \
xdrnio.c \
xdrres.c \
xdrrf.c \
lsb_params.c
